--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -11,7 +11,9 @@
 
   &__lead {
     color: $gray-dark;
-    font-size: 18px;
+    font-size: 22px;
+    max-width: 800px;
+    margin: 1rem;
   }
   &__card {
     border-radius: 5px;
