delete second pricing page
and change to sales@checklyhq.com for sales inquiries.

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -167,7 +167,7 @@
         <div class="d-flex flex-column">
           <h2 class="mb-2">Enterprise</h2>
           <p>Get a custom plan to fit your company's needs</p>
-          <a class="btn btn-primary mb-lg-0 mb-4 open-intercom-link" href="mailto:support@checklyhq.com">Contact sales</a>
+          <a class="btn btn-primary mb-lg-0 mb-4 open-intercom-link" href="mailto:sales@checklyhq.com">Contact sales</a>
         </div>
         <div class="d-flex flex-column ml-lg-auto mr-5">
           <div class="pricing__list">
