--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -469,11 +469,7 @@
 
       /* Toggle between hiding and showing the active panel */
       var panel = this.nextElementSibling
-      if (panel.style.display === 'block') {
-        panel.style.display = 'none'
-      } else {
-        panel.style.display = 'block'
-      }
+      panel.classList.toggle('active')
     })
   }
 
