chore: enterprise max-width container [ch-2477]

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -163,7 +163,7 @@
     <!-- ENTERPRISE -->
 
     <div class="pricing__enterprise">
-      <div class="container d-flex flex-row flex-wrap">
+      <div class="pricing__enterprise__content d-flex flex-row flex-wrap">
         <div class="d-flex flex-column">
           <h2 class="mb-2">Enterprise</h2>
           <p>Get a custom plan to fit your company's needs</p>
