fix: responsive version for iPad [ch-2379]

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -14,11 +14,11 @@
 
       <!-- CARDS --->
 
-      <div class="d-flex flex-row flex-wrap justify-content-center align-items-center text-center">
+      <div class="pricing__plans">
 
         <!-- FREE CARD -->
 
-        <div class="pricing__card pricing__card--dark mb-5 mb-lg-0">
+        <div class="pricing__card pricing__card--dark">
           <div class="pricing__love-devs">
             <img src="/images/love-devs.svg" alt="Checkly" />
           </div>
