--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -16,6 +16,19 @@
     max-width: 800px;
     margin: 1rem;
   }
+
+  &__plans {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    @include media-breakpoint-down(lg) {
+      flex-direction: column;
+    }
+  }
+
   &__card {
     border-radius: 5px;
     display: flex;
@@ -45,6 +58,10 @@
       h4 {
         color: $white;
       }
+      @include media-breakpoint-down(lg) {
+        margin-bottom: 48px;
+        border: 1px solid black
+      }
       @include media-breakpoint-down(sm) {
         margin-right: 0;
         width: 365px;
@@ -55,14 +72,10 @@
       height: 370px;
       background-color: $gray-light;
       width: 1px;
-      @include media-breakpoint-down(lg) {
+      @include media-breakpoint-down(sm) {
         height: 1px;
         width: 90%;
       }
-    }
-
-    @include media-breakpoint-down(lg) {
-      margin-bottom: 1rem;
     }
   }
 
@@ -72,7 +85,7 @@
       border: 1px solid $gray-light;
       border-radius: 5px;
       align-items: center;
-      @include media-breakpoint-down(lg) {
+      @include media-breakpoint-down(sm) {
         flex-direction: column;
       }
     }
