--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -13,7 +13,7 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com">Blog</a></li>
         {{ if eq .Section "docs" }}
           <form class="form-inline">
             <input class="form-control py-2" id="search" type="search" placeholder="Search the docs..."/>
