update font-famliy from fakt to inter

--- a/src/scss/checkly-webapp-src/style/scss/_typography.scss
+++ b/src/scss/checkly-webapp-src/style/scss/_typography.scss
@@ -1,4 +1,4 @@
-$font-family-sans-serif: 'fakt-soft', system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$font-family-sans-serif: 'Inter', system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  'Source Code Pro', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
