--- a/src/scss/checkly-webapp-src/style/fonts/fonts.scss
+++ b/src/scss/checkly-webapp-src/style/fonts/fonts.scss
@@ -1,26 +1,63 @@
 @font-face {
-  font-family: 'fakt-soft';
-  src: url("../fonts/fakt/FaktSoftPro-Blond.eot") format('embedded-opentype'),
-  url("../fonts/fakt/FaktSoftPro-Blond.woff") format("woff");
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Thin.ttf") format('truetype');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-ExtraLight.ttf") format('truetype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Light.ttf") format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'fakt-soft';
-  src: url("../fonts/fakt/FaktSoftPro-Normal.eot") format('embedded-opentype'),
-  url("../fonts/fakt/FaktSoftPro-Normal.woff") format("woff");
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Regular.ttf") format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'fakt-soft';
-  src: url("../fonts/fakt/FaktSoftPro-Medium.eot") format('embedded-opentype'),
-  url("../fonts/fakt/FaktSoftPro-Medium.woff") format("woff");
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Medium.ttf") format('truetype');
   font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-SemiBold.ttf") format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Bold.ttf") format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-ExtraBold.ttf") format('truetype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url("../fonts/inter/Inter-Black.ttf") format('truetype');
+  font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
@@ -32,3 +69,4 @@
   font-style: normal;
   font-display: swap;
 }
+
