home-landing font parameter update

--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -1,6 +1,6 @@
 <section class="e2e-pr-section">
   <div class="container">
-    <div class="row mb-lg-4 text-center justify-content-center mb-5">
+    <div class="row mb-lg-4 justify-content-center mb-5">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">e2e testing</h2>
         <h3 class="display-4 mb-4">Monitoring 💘 E2E testing</h3>
       </div>
