--- a/site/layouts/partials/results-section.html
+++ b/site/layouts/partials/results-section.html
@@ -1,12 +1,17 @@
 <section class="results-section">
   <div class="container">
-    <div class="row mb-lg-4 justify-content-center text-center">
-      <div class="col-sm-12"><h2 class="section-super-header">Stats & metrics</h2>
-        <h3 class="display-4 mb-4">Insights without limits</h3></div>
-      <div class="col-sm-12 col-md-10"><p class="lead">Doing a root cause without complete
+    <div class="row mb-lg-4 justify-content-center">
+      <div class="col-sm-12 col-md-8">
+        <h2 class="section-super-header">Stats & metrics</h2>
+        <h3 class="display-4 mb-4">Insights without limits</h3>
+        <p class="lead">Doing a root cause without complete
         and accurate data is insane. But too much detail can also be distracting.
         That's why next to calculating aggregates to keep an overview, Checkly stores each and every
-        raw result for you and your team to dive into.</p></div>
+        raw result for you and your team to dive into.</p>
+        <a class="cta-link" href="/docs/">Learn more</a>
+        <div class="mb-4 mb-lg-0">
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
