--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@ $light-blue: #EBFAFF;
 
 // typography
 $body-text: $gray-dark;
-$line-height-pub-site: 28px !important;
+$line-height-pub-site: 1.6;
 
 // sections
 $section-top-padding: 2rem;
