--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -1,6 +1,6 @@
 <section class="hero-section">
   <div class="container">
-    <div class="row text-center justify-content-center">
+    <div class="row justify-content-center">
       <div class="col-sm-12 col-md-8">
         <h1 class="display-3 mb-4">Delightful Active Monitoring for Developers</h1>
         <p class="lead mb-4">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
