--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -6,7 +6,6 @@ body {
 p {
   color: $body-text;
   line-height: $line-height-pub-site;
-  font-weight: 300;
 }
 
 // typography
@@ -34,7 +33,8 @@ p {
 
 .cta-link {
   color: $brand-primary;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 600;
   text-decoration: none;
   &:hover {
     text-decoration: none;
