--- a/src/scss/checkly-webapp-src/style/scss/_typography.scss
+++ b/src/scss/checkly-webapp-src/style/scss/_typography.scss
@@ -3,17 +3,17 @@ $font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:  'Source Code Pro', Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
 
-$font-size-base: 17px;
+$font-size-base: 16px;
 $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
 $font-size-xs:   .75rem !default;
 
-$font-weight-light: 200;
-$font-weight-normal: 300;
+$font-weight-light: 300;
+$font-weight-normal: 400;
 $font-weight-bold: 500;
 
 $font-weight-base: $font-weight-normal;
-$line-height-base: 1.5 !default;
+$line-height-base: 1.6;
 
 $font-size-h1: 2.5rem !default;
 $font-size-h2: 2rem !default;
@@ -25,22 +25,24 @@ $font-size-h6: 1rem !default;
 $headings-margin-bottom: $spacer;
 $headings-font-family:   inherit !default;
 $headings-font-weight:   400;
-$headings-line-height:   1.1 !default;
+$headings-line-height:   1.6;
 $headings-color:         $gray-dark;
+
+$headings-letter-spacing: -0.04em;
 
 $display1-size: 6rem;
 $display2-size: 5rem;
-$display3-size: 3.5rem;
-$display4-size: 3rem;
+$display3-size: 3.625rem;
+$display4-size: 2rem;
 
 $display1-weight:     300;
 $display2-weight:     400;
-$display3-weight:     500;
-$display4-weight:     400;
-$display-line-height: $headings-line-height !default;
+$display3-weight:     700;
+$display4-weight:     600;
+$display-line-height: $headings-line-height;
 
-$lead-font-size:   1.25rem !default;
-$lead-font-weight: 300 !default;
+$lead-font-size:   1.125rem;
+$lead-font-weight: 400;
 
 $small-font-size: 80% !default;
 
