--- a/src/scss/checkly-webapp-src/style/scss/_typography.scss
+++ b/src/scss/checkly-webapp-src/style/scss/_typography.scss
@@ -10,7 +10,8 @@ $font-size-xs:   .75rem !default;
 
 $font-weight-light: 300;
 $font-weight-normal: 400;
-$font-weight-bold: 500;
+$font-weight-seimi-bold: 600;
+$font-weight-bold: 600;
 
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.6;
