--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -16,7 +16,8 @@
     font-size: 1.5rem;
     margin-top: 2.5rem;
     margin-bottom: 0.5rem;
-    font-weight: 400;
+    font-weight: $font-weight-seimi-bold;
+    color: $black;
     padding-bottom: .5rem;
     border-bottom: 1px solid $gray-light;
   }
@@ -25,7 +26,8 @@
     font-size: 1.2rem;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
-    font-weight: 400;
+    font-weight: $font-weight-seimi-bold;
+    color: $black;
     padding-bottom: .3em;
   }
 
