--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -14,6 +14,7 @@
     letter-spacing: $headings-letter-spacing;
     line-height: 1.2;
     color: $black;
+    font-weight: 700;
   }
 
   .hero-text {
