added prelaod line for the Inter font-family

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1" />
 
   <link rel="stylesheet" href="/css/style.css" />
+
+  <link rel="preload" href="/fonts/inter/Inter-Black.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-Bold.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-ExtraBold.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-Light.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-Medium.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-SemiBold.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/inter/Inter-Thin.ttf" as="font" as="font" type="font/ttf" crossorigin/>
+
   <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin/>
   <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
 
