remove unsed fonts, revert pricing hero title

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -5,7 +5,7 @@
       <!-- HEADER-->
 
       <div class="pricing__hero d-flex flex-column align-items-center text-center">
-        <h1 class="display-3">Simple, fair pricing</h1>
+        <h1 class="display-3">Free for developers.<br>Grow as you go.</h1>
         <div class="pricing__lead">
           Sign up for a annual prepiad plan and get lower rates.
         </div>
