--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -4,11 +4,9 @@
   <meta name="description" content="{{ with .Description }}{{ . | markdownify }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . | markdownify}}{{ end }}{{ end }}{{ end }}" />
   <meta name="viewport" content="width=device-width" initial-scale="1" maximum-scale="1" />
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css" />
-
-  <link rel="preload" href="/fonts/inter/Inter-Bold.ttf" as="font" as="font" type="font/ttf" crossorigin/>
-  <link rel="preload" href="/fonts/inter/Inter-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
-  <link rel="preload" href="/fonts/inter/Inter-SemiBold.ttf" as="font" as="font" type="font/ttf" crossorigin/>
 
   <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin/>
   <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
