treatment homepage layout

--- a/site/layouts/partials/alerting-section.html
+++ b/site/layouts/partials/alerting-section.html
@@ -1,14 +1,14 @@
 <section class="alerting-section">
   <div class="container">
-    <div class="row mb-lg-4 justify-content-center">
+    <div class="row justify-content-center">
       <div class="col-sm-12 col-md-8">
         <h2 class="section-super-header">Alerting</h2>
-        <h3 class="display-4 mb-4">Alerting when and how you want it</h3>
         <picture>
           <source type="image/webp" srcset="/landing/alerting-options@2x.webp">
           <source type="image/png" srcset="/landing/alerting-options@2x.png">
-          <img alt="alert notification channels" class="img-w360 mb-4" src="/landing/alerting-options@2x.png"/>
+          <img alt="alert notification channels" class="alerting-top-image" src="/landing/alerting-options@2x.png"/>
         </picture>
+        <h3 class="display-4 mb-4">Alerting when and how you want it</h3>
         <p class="lead">Keep your team up to date with a
         generous helping of SMS messages and unlimited email, Pagerduty, Opsgenie, Slack and webhook
         notifications. Control exactly how, when and how often you get alerted. "Double checking" is enabled
