--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -1,11 +1,11 @@
 <section class="e2e-pr-section">
   <div class="container">
-    <div class="row mb-lg-4 justify-content-center mb-5">
+    <div class="row justify-content-center header-part">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">e2e testing</h2>
-        <h3 class="display-4 mb-4">Monitoring 💘 E2E testing</h3>
+        <h3 class="section-header">Monitoring 💘 E2E testing</h3>
       </div>
       <div class="col-sm-12 col-md-8">
-        <p class="lead mb-4">Monitoring production is great. But catching bugs before they hit production is better.
+        <p class="lead">Monitoring production is great. But catching bugs before they hit production is better.
           Run your API monitors and synthetic monitoring scripts against your staging environment on each <code>git push</code>.
         </p>
         <a class="cta-link" href="/docs/cicd/">Learn more</a>
