--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-4">
         <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block"><a href="https://1password.com" target="_blank"><img class="testimonial-logo"
+          <div class="card-block first"><a href="https://1password.com" target="_blank"><img class="testimonial-logo"
                                                                                         src="/images/testimonials/1password_logo.png"/></a>
             <p class="testimonial-text">"The flexible features and developer-friendly API made the integration super easy. Checkly is a fabulous developer tool! Bonus: their support is super friendly and knowledgeable!"</p>
             <div class="testimonial-portrait"><img src="/images/testimonials/1password_portrait.jpeg" class="rounded-circle" /></div>
@@ -16,7 +16,7 @@
       </div>
       <div class="col-sm-12 col-md-4">
         <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo"
+          <div class="card-block second"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo"
                                                                                         src="/images/testimonials/supplypike_logo.png"/></a>
             <p class="testimonial-text">"Checkly helps our teams to ship code more confidently and guide data-driven
               decision making.
@@ -31,7 +31,7 @@
       </div>
       <div class="col-sm-12 col-md-4">
         <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block"><a href="http://www.dfuse.io/" target="_blank"><img alt="dfuse logo"
+          <div class="card-block third"><a href="http://www.dfuse.io/" target="_blank"><img alt="dfuse logo"
                                                                                       class="testimonial-logo"
                                                                                       src="/images/testimonials/dfuse_logo.png"/></a>
             <p class="testimonial-text">"Checkly is super easy to setup and the best option for us to test our Websocket
