--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -2,12 +2,14 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-8">
-        <h1 class="display-3 mb-4">Delightful Active Monitoring for Developers</h1>
-        <p class="lead mb-4">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
+        <h1 class="display-3">Delightful Active Monitoring for Developers</h1>
+        <p class="lead">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
           and loving JavaScript.</p>
-        <div class="mb-4">
-          <a class="signup-button btn btn-success btn-lg" data-signup="data-signup"
-                             href="https://app.checklyhq.com/signup">Start for free</a></div>
+        <div>
+          <a class="signup-button btn btn-success btn-lg" data-signup="data-signup" href="https://app.checklyhq.com/signup">
+            Start for free
+          </a>
+        </div>
       </div>
       </div>
     </div>
