--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -1,16 +1,16 @@
 <section class="workflow-section">
   <div class="container">
-    <div class="row mb-lg-4 text-center justify-content-center mb-5">
+    <div class="row text-center justify-content-center">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">workflow</h2>
-        <h3 class="display-4 mb-4">Integrates with your workflow</h3>
+        <h3 class="display-4">Integrates with your workflow</h3>
       </div>
       <div class="col-sm-12 col-md-8">
-        <p class="lead mb-4">Checkly integrates with the open source & developer tools you use on a daily basis.</p>
+        <p class="lead">Checkly integrates with the open source & developer tools you use on a daily basis.</p>
       </div>
     </div>
     <div class="row text-left">
-      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
+        <div class="d-flex align-items-center" style="height: 80px;">
           <picture>
             <source type="image/webp" srcset="/landing/puppeteer-logo.webp">
             <source type="image/png" srcset="/landing/puppeteer-logo.png">
@@ -22,8 +22,8 @@
         <p>Harness the full power of the Puppeteer & Playwright frameworks to test and monitor your web apps.</p>
         <a class="cta-link" href="/docs/browser-checks">Learn more</a>
       </div>
-      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
+        <div class="d-flex align-items-center" style="height: 80px;">
           <picture>
             <source type="image/webp" srcset="/landing/javascript-logo.webp">
             <source type="image/png" srcset="/landing/javascript-logo.png">
@@ -34,8 +34,8 @@
         <p>Extend your monitoring with Javascript for custom authentication and test logic.</p>
         <a class="cta-link" href="/docs/api-checks/setup-teardown-scripts/">Learn more</a>
       </div>
-      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
+        <div class="d-flex align-items-center" style="height: 80px;">
           <picture>
             <source type="image/webp" srcset="/landing/github-logo.webp">
             <source type="image/png" srcset="/landing/github-logo.png">
@@ -46,8 +46,8 @@
         <p>Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
         <a class="cta-link" href="/docs/cicd/github/">Learn more</a>
       </div>
-      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
+        <div class="d-flex align-items-center" style="height: 80px;">
           <picture>
             <source type="image/webp" srcset="/landing/prometheus-logo.webp">
             <source type="image/png" srcset="/landing/prometheus-logo.png">
