--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -59,6 +59,14 @@
     }
   }
 
+  .btn {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 9px 1rem 10px;
+  }
+  .signup-button {
+    padding: 9px 22px 10px;
+  }
   &.navbar-fixed-drop-shadow {
     box-shadow: 0 1px 2px 0px rgba(31, 45, 61, 0.15);
     position: fixed;
