--- a/src/scss/sections/_all-features.scss
+++ b/src/scss/sections/_all-features.scss
@@ -1,20 +1,34 @@
 @import '../variables';
 
 .all-features-section {
-  padding-top: 1 * $section-top-padding;
-  padding-bottom: 1 *$section-bottom-padding;
+  padding-top: 1.2 * $section-top-padding;
+  padding-bottom: 2.4 *$section-bottom-padding;
+
+  .section-header {
+    margin-bottom: 50px;
+  }
 
   h5 {
     font-size: .875rem;
     text-transform: uppercase;
-    margin-bottom: 1rem;
+    margin-bottom: 12px;
     color: $gray-dark;
     display: inline-block;
     font-weight: 600;
     letter-spacing: .5px
   }
   p {
-    margin-bottom: 2 * $spacer;
+    margin-bottom: 37px;
     max-width: 300px;
+  }
+  .second {
+    margin: 0 auto;
+  }
+  .block {
+    max-width: 300px;
+    width: 100%;
+  }
+  .third {
+    margin-left: auto;
   }
 }
