--- a/src/scss/sections/_api-monitoring.scss
+++ b/src/scss/sections/_api-monitoring.scss
@@ -1,11 +1,15 @@
 @import '../variables';
 
 .api-monitoring-section {
-  padding-top: 3 * $section-top-padding;
-  padding-bottom: $section-bottom-padding;
-  height: 616px;
+  height: 887px;
+  padding-top: 1.6 * $section-top-padding;
+  padding-bottom: 1.6 * $section-bottom-padding;
   overflow: hidden;
   background: $ash;
+  .text-side {
+    margin-top: 195px;
+  }
+  
   img.assertions {
     left: -40px;
     top: 180px;
