--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -3,22 +3,26 @@
 .hero-section {
   height: 800px;
   overflow: hidden;
-  background-image: url('/images/css/tropical-bg.png');
-  background-position: center bottom;
-  background-repeat: repeat-x;
-  background-size: 100%;
-  margin-bottom: $section-bottom-margin;
   border-bottom: 1px solid $gray-light;
+
+  .col-md-8 {
+    padding: 0 12.5px;
+  }
 
   .display-3 {
     letter-spacing: $headings-letter-spacing;
-    line-height: 1.2;
+    line-height: 72px;
     color: $black;
     font-weight: 700;
+    margin-bottom: 30px;
+  }
+
+  .lead {
+    margin-bottom: 40px;
   }
 
   .hero-text {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 3rem;
   }
 
@@ -30,8 +34,15 @@
     color: $body-text;
   }
 
+  .btn {
+    font-size: 20px;
+    line-height: 32px;
+    padding: 12px 40px 11px;
+  }
+
   .hero-image {
     @include screen-shadow();
+    margin-top: 50px;
     border-radius: 5px;
     border: 1px solid $gray-light;
 
@@ -44,7 +55,7 @@
     }
 
     @include media-breakpoint-up(md) {
-      width: 960px;
+      width: 852px;
     }
   }
 }
