--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -7,7 +7,8 @@
       <div class="pricing__hero d-flex flex-column align-items-center text-center">
         <h1 class="display-3">Free for developers.<br>Grow as you go.</h1>
         <div class="pricing__lead">
-          Sign up for a annual prepiad plan and get lower rates.
+          Checkly is the active monitoring platform for developers: Deep API monitoring, open-source powered
+          E2E checks, dashboards and flexible alerting.
         </div>
       </div>
 
@@ -434,13 +435,14 @@
           </tr>
         </tbody>
       </table>
+        <div class="text-muted">* All plans are subject to our fair use policy. Check the FAQ below for more details.</div>
       </div>
 
 
       <!-- FAQ -->
 
       <div class="pricing__faq d-flex flex-column justify-content-center text-center mx-auto">
-        <h2 class="mb-5" id="faq">Frequently asked questions</h2>
+        <h2 class="mb-5" id="faq">FAQ</h2>
 
         {{ range .Site.Data.pricing.faq.questions }}
           <button class="pricing__accordion">{{ .q | markdownify }}</button>
