update home layout requirements

--- a/site/layouts/partials/api-monitoring-section.html
+++ b/site/layouts/partials/api-monitoring-section.html
@@ -14,14 +14,9 @@
       <div class="col-sm-7">
         <div class="image-side right">
           <picture>
-            <source type="image/webp" srcset="landing/api-assertions@2x.webp">
-            <source type="image/png" srcset="landing/api-assertions@2x.png">
-            <img  class="big-landing-image big-drop-shadow assertions fade-in ml-md-5 lazy" src="landing/api-assertions@2x.png" alt="api monitoring"  />
-          </picture>
-          <picture>
             <source type="image/webp" srcset="landing/api-results@2x.webp">
             <source type="image/png" srcset="landing/api-results@2x.png">
-            <img  class="big-landing-image big-drop-shadow results fade-in ml-md-5 lazy hidden-md-down" src="landing/api-results@2x.png" alt="api monitoring"  />
+            <img  class="big-landing-image code fade-in lazy hidden-md-down" src="landing/api-results@2x.png" alt="api monitoring"  />
           </picture>
         </div>
       </div>
