--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -11,15 +11,15 @@
           </a>
         </div>
       </div>
-      </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
         <picture>
-          <source type="image/webp" srcset="/landing/hero-image.webp">
-          <source type="image/png" srcset="/landing/hero-image.png">
-          <img  class="hero-image img-fluid" src="/landing/hero-image.png" alt="checkly monitoring dashboard"  />
+          <source type="image/webp" srcset="/landing/hero-image@2x.webp">
+          <source type="image/png" srcset="/landing/hero-image@2x.png">
+          <img  class="hero-image img-fluid" src="/landing/hero-image@2x.png" alt="checkly monitoring dashboard"  />
         </picture>
       </div>
     </div>
+  </div>
 </section>
