--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -14,16 +14,11 @@
         </div>
       </div>
       <div class="col-sm-7">
-        <div class="image-side right">
+        <div class="image-side">
           <picture>
-            <source type="image/webp" srcset="/landing/browser-code@2x.webp">
-            <source type="image/png" srcset="/landing/browser-code@2x.png">
-            <img  class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.png" alt="synthetic monitoring"  />
-          </picture>
-          <picture>
-            <source type="image/webp" srcset="/landing/browser-screenshots@2x.webp">
-            <source type="image/png" srcset="/landing/browser-screenshots@2x.png">
-            <img  class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.png" alt="synthetic monitoring"  />
+            <source type="image/webp" srcset="/landing/synthetic-monitoring@2x.png">
+            <source type="image/png" srcset="/landing/synthetic-monitoring@2x.png">
+            <img  class="big-landing-image code fade-in lazy" src="/landing/synthetic-monitoring@2x.png" alt="synthetic monitoring"  />
           </picture>
         </div>
       </div>
