--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,7 +2,7 @@
   min-height: 4rem;
   transition: all .5s;
   z-index: 9999;
-  background-color: $white;
+  background-color: $ash;
   .callout {
     font-size: 13px;
     font-weight: 400;
