--- a/src/scss/sections/_alerting.scss
+++ b/src/scss/sections/_alerting.scss
@@ -13,8 +13,8 @@
   }
 
   .display-4 {
-    margin-top: 10px;
-    margin-bottom: 17px;
+    margin-top: 5px;
+    margin-bottom: 10px;
   }
 
   .lead {
@@ -22,8 +22,7 @@
   }
 
   .alerting-top-image {
-    width: 100%;
-    max-width: 677px;
+    width: 750px;
   }
 
   .alerting-options-image {
