--- a/src/scss/sections/_trusted-by.scss
+++ b/src/scss/sections/_trusted-by.scss
@@ -5,7 +5,7 @@
   text-align: center;
   padding-top: $section-top-padding;
   padding-bottom: $section-bottom-padding;
-  background: $ash;
+  background: $white;
 
   img.trusted-by-image {
     max-width: 1110px;
