--- a/site/layouts/partials/alerting-section.html
+++ b/site/layouts/partials/alerting-section.html
@@ -8,7 +8,7 @@
           <source type="image/png" srcset="/landing/alerting-options@2x.png">
           <img alt="alert notification channels" class="alerting-top-image" src="/landing/alerting-options@2x.png"/>
         </picture>
-        <h3 class="display-4 mb-4">Alerting when and how you want it</h3>
+        <h3 class="display-4">Alerting when and how you want it</h3>
         <p class="lead">Keep your team up to date with a
         generous helping of SMS messages and unlimited email, Pagerduty, Opsgenie, Slack and webhook
         notifications. Control exactly how, when and how often you get alerted. "Double checking" is enabled
