--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,9 +1,14 @@
 @import '../variables';
 
 .hero-section {
+  padding-top: 3rem;
   height: 800px;
   overflow: hidden;
-  border-bottom: 1px solid $gray-light;
+  background-image: url('/images/css/tropical-bg.png');
+  background-position: center bottom;
+  background-repeat: repeat-x;
+  background-size: 100%;
+  background-color: $ash;
 
   .col-md-8 {
     padding: 0 12.5px;
@@ -18,7 +23,7 @@
   }
 
   .lead {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 
   .hero-text {
@@ -41,10 +46,9 @@
   }
 
   .hero-image {
-    @include screen-shadow();
+    margin: auto;
     margin-top: 50px;
-    border-radius: 5px;
-    border: 1px solid $gray-light;
+    max-width: 1100px;
 
     @include media-breakpoint-up(xs) {
       width: 360px;
@@ -55,7 +59,7 @@
     }
 
     @include media-breakpoint-up(md) {
-      width: 852px;
+      width: 100%;
     }
   }
 }
