--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -31,6 +31,7 @@
       position: fixed;
       ul {
         list-style: none;
+        font-size: 14px;
       }
     }
 
@@ -48,11 +49,11 @@
 
     &-title {
       display: inline-block;
-      font-weight: 500;
+      font-weight: 600;
       font-size: 1rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 5px;
+      margin-top: 10px;
       &.active {
-        font-weight: 400;
         color: $brand-primary;
       }
     }
