--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {{ partial "head" . }}
   <body class="landing">
-  {{ partial "navbar" . }}
+  {{ partial "navbar-home" . }}
     <div class="main">
       <div class="landing" id="landing">
         {{ partial "hero-section" . }}
