--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
-<div class="main pt-3">
+<div class="main">
   <div class="pricing">
     <div class="container">
       <!-- HEADER-->
 
       <div class="pricing__hero d-flex flex-column align-items-center text-center">
-        <h1 class="display-3">Free for developers.<br>Grow as you go.</h1>
+        <h1 class="display-3">Free for developers. Grow as you go.</h1>
         <div class="pricing__lead">
           Sign up for a annual prepiad plan and get lower rates.
         </div>
